Fix broken requirements.txt
Signed-off-by: Still Hsu <dev@stillu.cc>

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ tldextract
 imagehash
 oletools
 olefile
-"networkx>=2.1"
+networkx>=2.1
 mixbox
 capstone
 PyCrypto
@@ -19,7 +19,7 @@ xmltodict
 future
 python-dateutil
 requests_file
-"gevent==20.4.0"
+gevent==20.4.0
 simplejson
 pyvmomi
 pyinstaller
@@ -38,15 +38,15 @@ pyzipper
 git+https://github.com/Defense-Cyber-Crime-Center/DC3-MWCP.git
 git+https://github.com/kevthehermit/RATDecoders.git
 git+https://github.com/fireeye/capa.git
-"greenlet==0.4.16"
+greenlet==0.4.16
 cython
-git+https://github.com/andreasvc/pyre2.gi
+git+https://github.com/andreasvc/pyre2.git
 git+https://github.com/jbremer/peepdf.git
-"matplotlib>=2.2.2"
-"numpy>=1.15.0"
-"six>=1.12.0"
-"statistics>=1.0.3.5"
-"django>3"
+matplotlib>=2.2.2
+numpy>=1.15.0
+six>=1.12.0
+statistics>=1.0.3.5
+django>3
 git+https://github.com/jsocol/django-ratelimit.git
 sqlalchemy
 sqlalchemy-utils
